--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "eslint": "^4.3.0",
+    "firebase": "^4.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "3.0.0",
